testdata/asm/invalid/flow_02.zkasm
;;error:3:1-2:missing return
fn f(x u16) -> (res u2) {
}
